Timeline spacing fixed

--- a/css/masterefsaestyle.css
+++ b/css/masterefsaestyle.css
@@ -1180,7 +1180,7 @@ a.button {
   overflow: hidden;
   margin-left: auto;
   margin-right:auto;
-  margin-top:100px;
+  margin-top:60px;
   margin-bottom:0px;
   position: relative;
 }
